Changed the datatype of imported to string

--- a/tax/src/main/resources/templates/items-add.html
+++ b/tax/src/main/resources/templates/items-add.html
@@ -20,6 +20,7 @@
     <option th:value="'Books'" th:text="Books"></option>
     <option th:value="'Food'" th:text="Food"></option>
     <option th:value="'Medical'" th:text="Medical"></option>
+    <option th:value="'Others'" th:text="Others"></option>
 	</select>
 	
 	<br>
@@ -47,6 +48,9 @@
 	
 <hr>
 <a th:href="@{/tax/shoppinglist}">Show Items</a>
+<br>
+<br>
+<a th:href="@{/tax/receipt}">Checkout/View Bill</a>
 </body>
 
 </html>
