--- a/tax/src/main/resources/templates/shopping-list.html
+++ b/tax/src/main/resources/templates/shopping-list.html
@@ -13,7 +13,7 @@
 	<thead>
 	<tr>
 		<th>ItemName</th>
-		<th>category</th>
+		<th>Category</th>
 		<th>Imported</th>
 		<th>Price</th>
 		<th>Quantity</th>
@@ -36,8 +36,14 @@
 
 
 </table>
+<hr>
 
-
+<br> 
+<br>
+<a th:href="@{/tax/showFormForAdd}">Add more Items</a>
+<br>
+<br>
+<a th:href="@{/tax/receipt}">Checkout/View Bill</a>
 </body>
 
 </html>
