--- a/tax/src/main/resources/templates/items-add.html
+++ b/tax/src/main/resources/templates/items-add.html
@@ -1,56 +1,90 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+<!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 <title>Enter Items</title>
 
 </head>
 
 <body>
-<h3>Enter purchase item</h3>
-<hr>
+<div class="container">
+<p class="h4 mb-4">Enter purchase item</p>
 
-<form action="#" th:action="@{/tax/save}"
-				 th:object="${item}" method="POST">
-	Item Name
-	<input type="text" th:field="*{itemName}" placeholder="Item Name" name="ItemName"/>
-	<br>
-	<br>
-	Category
-	<select th:field="*{category}">
-    <option th:value="'Books'" th:text="Books"></option>
-    <option th:value="'Food'" th:text="Food"></option>
-    <option th:value="'Medical'" th:text="Medical"></option>
-    <option th:value="'Others'" th:text="Others"></option>
-	</select>
+	<form action="#" th:action="@{/tax/save}"
+				 	th:object="${item}" method="POST"
+				 	class="form-horizontal" >
+				 
+	<div class="form-group">
+		<label class="control-label col-sm-2" for="itemName">Item Name :</label>
+		<div class="col-sm-10">
+			<input type="text" th:field="*{itemName}" placeholder="Item Name" name="ItemName" class="form-control mb-3 col-3"/>
+			<p class="alert alert-danger" th:if="${#fields.hasErrors('itemName')}" th:errors="*{itemName}">
+		</div>
+	</div>
+	<div class="form-group">
+		<label class="control-label col-sm-2" for="category">Category :</label>
+		<div class="col-sm-10">
 	
-	<br>
-	<br>
-	Imported
-	<select th:field="*{imported}">
+	
+	<select th:field="*{category}" class="form-control mb-3 col-3">
+   <option th:value="'Books'" th:text="Books" ></option>
+   <option th:value="'Food'" th:text="Food"></option>
+   <option th:value="'Medical'" th:text="Medical"></option>
+   <option th:value="'Others'" th:text="Others"></option>
+	</select>
+	<p class="alert alert-danger" th:if="${#fields.hasErrors('category')}" th:errors="*{ItemName}">
+	</div>
+	</div>
+	
+	<div class="form-group">
+		<label class="control-label col-sm-2" for="imported">Imported :</label>
+		<div class="col-sm-10">
+	
+	<select th:field="*{imported}" class="form-control mb-3 col-3">
     <option th:value="'Yes'" th:text="Yes"></option>
     <option th:value="'No'" th:text="No"></option>
     
 	</select>
+	<p class="alert alert-danger" th:if="${#fields.hasErrors('imported')}" th:errors="*{imported}">
+	</div>
+	</div>
 	
-	<br>
-	<br>
-	Price
-	<input type="text" th:field="*{price}" placeholder="Price"/>
-	<br>
-	<br>
-	Quantity
-	<input type="text" th:field="*{quantity}" placeholder="Quantity"/>
-	<br>
-	<br>
-	<button type="submit">Add Item</button>
+	<div class="form-group">
+		<label class="control-label col-sm-2" for="price">Price :</label>
+		<div class="col-sm-10">
+	
+	<input type="text" th:field="*{price}" class="form-control mb-3 col-3"/>
+	<p class="alert alert-danger" th:if="${#fields.hasErrors('price')}" th:errors="*{price}">
+	</div>
+	</div>
+	
+	<div class="form-group">
+		<label class="control-label col-sm-2" for="quantity">Quantity :</label>
+		<div class="col-sm-10">
+	
+	<input type="text" th:field="*{quantity}" class="form-control mb-3 col-3" placeholder="Quantity"/>
+	<p class="alert alert-danger" th:if="${#fields.hasErrors('quantity')}" th:errors="*{quantity}">
+	</div>
+	</div>
+	
+	<div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+		<button type="submit" class="btn btn-primary col-2">Add Item</button>
+	</div>
+	</div>
 
 </form>
-	
-<hr>
-<a th:href="@{/tax/shoppinglist}">Show Items</a>
+<br>
+<a th:href="@{/tax/shoppinglist}" >Show Items</a>
 <br>
 <br>
 <a th:href="@{/tax/receipt}">Checkout/View Bill</a>
+</div>
 </body>
 
 </html>
