--- a/tax/src/main/resources/templates/receipt.html
+++ b/tax/src/main/resources/templates/receipt.html
@@ -1,14 +1,21 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+<!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 <title>Receipt</title>
 
 </head>
 
 <body>
+<div class="container">
 <h3>Receipt</h3>
 <hr>
-<table border="1">
+<table class="table table-bordered table-hover">
 	<thead>
 	<tr>
 		<th>ItemName</th>
@@ -40,7 +47,8 @@ Sales Tax :<span th:text="${totalSalesTax}"></span>
 Total Cost :<span th:text="${totalCost}"></span>
 <br>
 <br>
-<a th:href="@{/tax/newCustomer}">New Customer</a>
+<a th:href="@{/tax/newCustomer}" class="btn btn-primary btn-sm mb-3">New Customer</a>
+</div>
 </body>
 
 </html>
