--- a/tax/src/main/resources/templates/success.html
+++ b/tax/src/main/resources/templates/success.html
@@ -1,13 +1,21 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+<!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 <title>Success</title>
 
 </head>
 
 <body>
-<h3>Item addedd successfully</h3>
-<hr>
+<div class="container">
+<br>
+<p class="h4 mb-4">Item added successfully</p>
+
 <br>
 <br>
 <a th:href="@{/tax/shoppinglist}">Show Items</a>
@@ -17,6 +25,7 @@
 <br>
 <br>
 <a th:href="@{/tax/receipt}">Checkout/View Bill</a>
+</div>
 </body>
 
 </html>
