Minor html changes

--- a/tax/src/main/resources/templates/items-add.html
+++ b/tax/src/main/resources/templates/items-add.html
@@ -79,11 +79,11 @@
 	</div>
 
 </form>
-<br>
+<!-- br>
 <a th:href="@{/tax/shoppinglist}" >Show Items</a>
 <br>
 <br>
-<a th:href="@{/tax/receipt}">Checkout/View Bill</a>
+<a th:href="@{/tax/receipt}">Checkout/View Bill</a> -->
 </div>
 </body>
 
